@@ -1,5 +1,17 @@
 2020-03-02  Eric Blake  <eblake@redhat.com>
 
+	ios: Prove we don't need seek.
+	* src/ios-dev.h (struct ios_dev_if): Add offset parameter to get_c
+	and put_c.
+	* src/ios.c (IOS_GET_C_ERR_CHCK, IOS_PUT_C_ERR_CHCK)
+	(ios_read_string, ios_write_string): Pass offset through.
+	* src/ios-dev-file.c (ios_dev_file_getc, ios_dev_file_putc):
+	Update signature and add assertion.
+	* src/ios-dev-mem.c (ios_dev_mem_getc, ios_dev_mem_putc):
+	Likewise.
+
+2020-03-02  Eric Blake  <eblake@redhat.com>
+
 	ios: Pass offset to low-level macros.
 	* src/ios.c (IOS_GET_C_ERR_CHCK, IOS_PUT_C_ERR_CHCK)
 	(IOS_READ_INTO_CHARRAY_1BYTE, IOS_READ_INTO_CHARRAY_2BYTES)
